--- a/.eslintrc
+++ b/.eslintrc
@@ -1,13 +1,14 @@
 {
-    "parser": "babel-eslint",
-    "extends": "airbnb",
-    "plugins": ["react", "jsx-a11y", "import"],
-    "env": {
-      "browser": true,
-      "node": true
-    },
-    "rules": {
-      "react/jsx-filename-extension": [1, { "extensions": [".js", ".jsx"] }],
-      "no-console": "off"
-    }
+  "parser": "babel-eslint",
+  "extends": "airbnb",
+  "plugins": ["react", "jsx-a11y", "import"],
+  "env": {
+    "browser": true,
+    "node": true
+  },
+  "rules": {
+    "react/jsx-filename-extension": [1, { "extensions": [".js", ".jsx"] }],
+    "no-console": "off",
+    "import/extensions": ["off", "never"]
   }
+}
