--- a/.travis.yml
+++ b/.travis.yml
@@ -5,3 +5,10 @@ cache:
   directories:
   - node_modules
 script: npm test
+deploy:
+  provider: heroku
+  api_key: $heroku_api_key
+  app: hapi-react-spa
+  run:
+    - "yarn install"
+    - "npm run build"
