--- a/.eslintrc
+++ b/.eslintrc
@@ -10,6 +10,15 @@
     "react/jsx-filename-extension": [1, { "extensions": [".js", ".jsx"] }],
     "no-console": "off",
     "import/extensions": ["off", "never"],
-    "comma-dangle": ["error", "always", { "functions": "never" }]
+    "comma-dangle": [
+      "error",
+      {
+        "arrays": "always-multiline",
+        "exports": "always-multiline",
+        "functions": "never",
+        "imports": "always-multiline",
+        "objects": "always-multiline"
+      }
+    ]
   }
 }
