--- a/package.json
+++ b/package.json
@@ -33,5 +33,8 @@
     "eslint-plugin-react": "^7.3.0",
     "flow-bin": "^0.54.1",
     "prettier-eslint": "^7.1.0"
+  },
+  "engines": {
+    "node": "8.1.0"
   }
 }
