--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "react-scripts": "1.0.13"
   },
   "scripts": {
+    "postinstall": "npm run build",
     "serve": "node server.js",
     "start": "react-scripts start",
     "build": "react-scripts build",
