App prototype files

--- a/package.json
+++ b/package.json
@@ -3,6 +3,9 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "axios": "^0.18.0",
+    "cheerio": "^1.0.0-rc.2",
+    "fs": "0.0.1-security",
     "hapi": "^16.5.2",
     "inert": "^4.2.1",
     "path": "^0.12.7",
